--- a/branches/SQUID_2_5/ChangeLog
+++ b/branches/SQUID_2_5/ChangeLog
@@ -7,12 +7,22 @@ Changes to squid-2.5.STABLE12 (Not yet released)
 	- [Cosmetic] Add additinal tracing to squid_ldap_auth making
 	  diagnostics easier on squid_ldap_auth configuration errors
 	  (Bug #1395)
+	- [Minor] $HOME not set when started as root (Bug #1401)
 	- [Minor] httpd_accel_single_host breaks in combination with
 	  server_persistent_connections (Bug #1402)
 	- [Cosmetic] Setting CACHE_HTTP_PORT to configure was only partially
 	  implemented, effectively ignored. (Bug #1403)
 	- [Minor] CNAME based DNS addresses could get cached for longer
 	  than intended (Bug #1404)
+	- [Minor] Incorrect handling of squid-internal-dynamic/netdb exchanges
+	  in transparently intercepting proxies (Bug #1410).
+	- [Minor] Cache revalidations on HEAD requests causing poor cache
+	  hit ratio (Bug #1411).
+	- [Minor] Not possible to send 302 redirects via a redirector in
+	  response to CONNECT requests (bug #1412)
+	- [Minor] Incorrect handling of Set-Cookie on cache refreshes (Bug
+	  #1419)
+	- [Major] Segmentation fault crash in rfc1738_do_escape (Bug #1426)
 	
 Changes to squid-2.5.STABLE11 (22 Sep 2005)
 
