--- a/branches/SQUID_2_5/ChangeLog
+++ b/branches/SQUID_2_5/ChangeLog
@@ -1,3 +1,5 @@
+	- [Minor] Added WebDAV REPORT method to know HTTP methods list
+
 Changes to squid-2.5.STABLE12 (22 Oct 2005)
 
 	- [Major] Error introduced in 2.5.STABLE11 causing truncated responses
