--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ Changes to squid-2.6 (not yet released)
 
 	- --enable-default-hostsfile configure option
 	- Added username info to active_requests cachemgr stats
+	- Modified squid MIB to incorporate squid.conf visible_hostname
 
 Changes to squid-2.5.STABLE14 (not yet released)
 	- [Minor] icons not displayed when visible_hostname is a
