--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ Changes to squid-2.6 (not yet released)
 	- Modified squid MIB to incorporate squid.conf visible_hostname
 	- Added multi-line capability in squid.conf
 	- Added new httpd_suppress_version_string configuration directive
+	- WCCPv2 support
 
 Changes to squid-2.5.STABLE14 (not yet released)
 	- [Minor] icons not displayed when visible_hostname is a
