Support for the Negotiate authentication scheme, and corresponding rewrite of the NTLM authentication scheme.
The Negotiate authentication scheme is quite similar to NTLM, only
difference is that the number of handshakes varies (one or three), and
that there is a final blob sent to the client on successful authentication.

In this rewrite the challenge reuse functionality previously found in the
NTLM scheme has been ripped out. Was causing lots of headaches, and never
really working properly. Instead we will be looking into a more efficient
helper protocol to deal with this in a correct manner.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ Changes to squid-2.6 (not yet released)
 	- Added multi-line capability in squid.conf
 	- Added new httpd_suppress_version_string configuration directive
 	- WCCPv2 support
+	- Negotiate authentication scheme support
+	- NTLM authentication scheme rewritten
 
 Changes to squid-2.5.STABLE14 (not yet released)
 	- [Minor] icons not displayed when visible_hostname is a
