--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,9 @@ Changes to squid-2.6 (not yet released)
 	- WCCPv2 support
 	- Negotiate authentication scheme support
 	- NTLM authentication scheme rewritten
+	- Customizable access log formats
+	- Selective access logging
+	- Access logging via syslog
 
 Changes to squid-2.5.STABLE14 (not yet released)
 	- [Minor] icons not displayed when visible_hostname is a
