--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -11,6 +11,8 @@ Changes to squid-2.6 (not yet released)
 	- Customizable access log formats
 	- Selective access logging
 	- Access logging via syslog
+	- Reverse proxy enhancements, with new cache_peer based forwarding
+	  model.
 
 Changes to squid-2.5.STABLE14 (not yet released)
 	- [Minor] icons not displayed when visible_hostname is a
