Imported improved Digest helpers from Squid-3
  - text helper also understands hashed passwords

  - new ldap helper using LDAP for the password store rather
    than plain files locally. Note that it requires either
    access to the plain text password or a digest hash so
    some preparation will be needed to use this..

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,8 @@ Changes to squid-2.6 (not yet released)
 	- Access logging via syslog
 	- Reverse proxy enhancements, with new cache_peer based forwarding
 	  model.
+	- LDAP based Digest helper (Note: not true LDAP integration, just using
+	  LDAP for storage of the Digest hashes)
 
 Changes to squid-2.5.STABLE14 (not yet released)
 	- [Minor] icons not displayed when visible_hostname is a
