Include the helper protocol update in ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@ Changes to squid-2.6 (not yet released)
 	  model.
 	- LDAP based Digest helper (Note: not true LDAP integration, just using
 	  LDAP for storage of the Digest hashes)
+	- Improved helper communication protocol
 
 Changes to squid-2.5.STABLE14 (not yet released)
 	- [Minor] icons not displayed when visible_hostname is a
