--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -16,6 +16,7 @@ Changes to squid-2.6 (not yet released)
 	- LDAP based Digest helper (Note: not true LDAP integration, just using
 	  LDAP for storage of the Digest hashes)
 	- Improved helper communication protocol
+	- External ACL improvements. %PATH, log= (more to come before release)
 
 Changes to squid-2.5.STABLE14 (not yet released)
 	- [Minor] icons not displayed when visible_hostname is a
