--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -19,6 +19,7 @@ Changes to squid-2.6 (not yet released)
 	- External ACL improvements. %PATH, log= (more to come before release)
 	- Improved SSL support with hardware offload, client certificate
 	  support (primitive), chained certificates and numerous bug fixes
+	- Linux epoll support
 
 Changes to squid-2.5.STABLE14 (not yet released)
 	- [Minor] icons not displayed when visible_hostname is a
