--- a/branches/SQUID_2_5/ChangeLog
+++ b/branches/SQUID_2_5/ChangeLog
@@ -1,4 +1,4 @@
-Changes to squid-2.5.STABLE14 (not yet released)
+Changes to squid-2.5.STABLE14 (20 May 2006)
 	- [Minor] icons not displayed when visible_hostname is a
 	  short hostname (witout domain). (Bug #1532)
 	- [Medium] Memleak in HTCP client code (default disabled)
