--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -41,7 +41,7 @@ Changes to squid-2.5.STABLE13 (12 Mar 2006)
 	- [Minor] Squid crash when asyncio function counters url accessed
 	  from Cachemgr CGI (Bug #1464)
 	- [Cosmetic] Linux compile warning about prctl called with too few
- 	  arguments (Bug #1483)
+	  arguments (Bug #1483)
 	- [Minor] Wrong timezone declaration for 64 bit Irix (Bug #1479)
 	- [Minor] Some 206 responses logged incorrectly (Bug #1511)
 	- [Minor] Issues in processing ranges on objects >2GB (Bug #437)
@@ -62,7 +62,7 @@ Changes to squid-2.5.STABLE13 (12 Mar 2006)
 	- [Cosmetic] Error in FTP listings of files with -> in their name
 	  (Bug #1508)
 	- [Cosmetic] With Squid-2.5 there is no more the DUPLICATE IP logging
- 	  in cache.log (Bug #779)
+	  in cache.log (Bug #779)
 	- [Minor] Fails to process long host names (Bug #1434)
 	- [Cosmetic] Azerbaijani errors translation (Bug #1454)
 	- [Cosmetic] misleading error message message for bad/unresolveable
@@ -170,7 +170,7 @@ Changes to squid-2.5.STABLE10 (17 May 2005)
 	- [Minor Security] Fix race condition in relation to old Netscape
 	  Set-Cookie specifications
 	- [Minor] Fails to parse D.J.  Bernstein's FTP EPLF ftp listing
-          format and PASV resposes (Bug #1252)
+	  format and PASV resposes (Bug #1252)
 	- [Medium] BASE HREF missing on ftp directory URLs without /
 	  (Bug #1253)
 	- [Minor security] confusing http_access results on configuration
@@ -428,7 +428,7 @@ Changes to squid-2.5.STABLE5 (1 Mar 2004):
 	- Bug #812: Mozilla/Netscape plugins mime type defined (.xpi)
 	- Bug #817: maximum_object_size too large causes squid not to cache
 	- Bug #824: 100% CPU loop if external_acl combined with separate
-          authentication acl in the same http_access line
+	  authentication acl in the same http_access line
 	- squid_ldap_group updated to version 2.12 with support for ldaps://
 	  (LDAPv2 over SSL) and a numer of other improvements.
 	- Bug #799: positive_dns_ttl ignored when using internal DNS.
@@ -580,7 +580,7 @@ Changes to squid-2.5.STABLE3 (25 May 2003):
 	- Bug #598: squid_ldap_auth could segfault if LDAP server is
 	  unavailable
 	- Bug #609,#612: msntauth helper fixes in dealing with large
- 	  or non-existing allow/deny user files.
+	  or non-existing allow/deny user files.
 	- Bug #620: acl ident REQUIRED matches even if the ident lookup fails
 	- Bug #432: reply_body_max_size fails with ident or proxy_auth acls
 	  and also fails to block large objects where the content-length
@@ -599,7 +599,7 @@ Changes to squid-2.5.STABLE3 (25 May 2003):
 	- Bug #587: smb_auth fails on complex logins involving domain names
 	  or other odd characters
 	- Bug #558, #587: smb_auth.pl fails on complex logins involving
-          domain names or other odd characters
+	  domain names or other odd characters
 	- Bug #643: external_acl fails with ttl=0 due to a change introduced
 	  by the patch for Bug #553 in 2.5.STABLE2.
 	- Bug #630: minor issues in digest authantication causing random
@@ -748,7 +748,7 @@ Changes to squid-2.5.STABLE1 (September 25, 2002):
 	  browsers know which HTML specification the document uses.
 	  In addition to that they have a new look (background-color, font)
 	  and are valid according to the HTML standards at www.w3.org.
-	  (Clemens Löser)
+	  (Clemens L ser)
 	- Login and password send to Basic auth helpers is now URL escaped
 	  to allow for spaces and other "odd" characters in logins and
 	  passwords
@@ -1265,7 +1265,7 @@ Changes to Squid-2.3.DEVEL3 ():
 	- Added --heap-replacement configure option.  This enables
 	  the alternative cache replacement policies, such as
 	  GDSF, and LFUDA.
-	- WCCP establishes and registers with the router faster.	
+	- WCCP establishes and registers with the router faster.        
 	- Added 'maxconn' acl type to limit the number of established
 	  connections from a single client IP address.  Submitted
 	  by Vadim Kolontsov.
@@ -1452,7 +1452,7 @@ Changes to Squid-2.2 (April 19, 1999):
 	- Removed view-based access crontrol
 	- Cleaned up and simplified SNMP section of squid.conf
 	- Changed the SNMP code to use a tree stucture.
-	- Added objects to MIB:	
+	- Added objects to MIB: 
 		Request Hit Ratio's
 		Byte Hit Ratio's
 		Number of Clients
@@ -2463,7 +2463,7 @@ Changes to squid-1.2.beta16 (Mar 4, 1998):
 	- Changed "-d" command line option to take debugging level
 	  as argument.  Debugging equal-to or less-than the argument
 	  will be written to stderr.
-	- Removed unused urlClean() function from url.c.	
+	- Removed unused urlClean() function from url.c.        
 	- Fixed a bug that allowed '?' parts of urls to be recorded in
 	  store.log.  Logged urls are now "clean".
 	- Cache Manager got new Web interface (cachemgr.cgi). New .cgi
@@ -2839,7 +2839,7 @@ Changes to squid-1.2.beta8 (Dec 2, 1997):
 	- Removed xmalloc() return check in uudeocde.c
 	- Added 'ifdef' support to cf_gen.c for optional code (e.g. SNMP)
 	- Changed 'client' program to provide easier cache manager access,
-	  e.g.:	'client mgr:info'
+	  e.g.: 'client mgr:info'
 	- Fixed 'client' to send 'Connection' instead of 'Proxy-Connection'
 	  for simulated keep-alive requests.
 	- Removed 'fd' arg from clientProcess* functions.
