--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,8 @@ Changes to squid-2.6 (not yet released)
 	  support (primitive), chained certificates and numerous bug fixes
 	- Linux epoll support
 	- Optional support for blank passwords
+	- DNS search list improvements: added support for Windows DNS search
+	  list and display of search list in DNS stats
 
 Changes to squid-2.5.STABLE14 (not yet released)
 	- [Minor] icons not displayed when visible_hostname is a
