--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,5 +1,5 @@
 Changes to squid-2.6 (not yet released)
-
+	
 	- New --enable-default-hostsfile configure option
 	- Added username info to active_requests cachemgr stats
 	- Modified squid MIB to incorporate squid.conf visible_hostname
@@ -24,6 +24,7 @@ Changes to squid-2.6 (not yet released)
 	- DNS search list improvements: added support for Windows DNS search
 	  list and display of search list in DNS stats
 	- Added the capability to run as a Windows service under Cygwin
+	- CARP now plays well with the other peering algorithms
 
 Changes to squid-2.5.STABLE14 (20 May 2006)
 	- [Minor] icons not displayed when visible_hostname is a
