--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,7 @@ Changes to squid-2.6 (not yet released)
 	- Added the capability to run as a Windows service under Cygwin
 	- CARP now plays well with the other peering algorithms
 	- read_ahead_gap option to read ahead more than 16KB of the reply
+	- http_port is now optional, allowing for SSL only operation
 
 Changes to squid-2.5.STABLE14 (20 May 2006)
 	- [Minor] icons not displayed when visible_hostname is a
