Documentation update (ChangeLog)

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,11 @@
 	  already parsed headers when building the client reply.
 	- Simple perl library and script for processing access.log files
 	- General code tidyups of HTTP parser and related optimizations
-	- Primitive support for HTTP/1.1 chunked encoding, working around
-	  broken servers
+	- Kill the psuedo-support for wais. Was never really implemented.
+	- Clean up use of httpReplySetHeaders to be consistent across the
+	  code, and remove the unneeded http_version argument.
+	- Fix gopher to build a proper parsed HTTP reply instead of hardcoding
+	  a custom HTTP stream.
 
 Changes to squid-2.6.STABLE10 (not yet released>
 
@@ -17,6 +20,14 @@ Changes to squid-2.6.STABLE10 (not yet released>
 	- Fix icmp pinger communication on FreeBSD and other not supporing
 	  large dgram AF_UNIX sockets
 	- Release objects on swapin failure
+	- Bug #1787: Objects stuck in cache if origin server clock in future
+	- Bug #1420: 302 responses with an Expires header is always cached
+	- Primitive support for HTTP/1.1 chunked encoding, working around
+	  broken servers
+	- Clean up relations between TCP probing and DNS checks of peers with
+	  no known addresses.
+	- Fix a minor HTML coding error in ftp directory listings with // in
+	  the path
 
 Changes to squid-2.6.STABLE9 (Jan 24 2007)
 
